fix: fixing url fix: fixing overflow issue on task item

--- a/src/app/components/task-item/task-item.component.css
+++ b/src/app/components/task-item/task-item.component.css
@@ -29,3 +29,8 @@
 .task-content {
   flex-grow: 1;
 }
+
+.description {
+  overflow: scroll;
+  padding: 10px;
+}
